--- a/pages/déinstallation.html
+++ b/pages/déinstallation.html
@@ -61,7 +61,7 @@
     </style>
 </head>
 <body>
-    <img src="img/logo.png" alt="Logo Crimson" class="logo">
+    <img src="https://crimson-streaming.github.io/crimson/img/logo.png" alt="Logo Crimson" class="logo">
     <h1>Veuillez désinstaller l'application</h1>
     <p>Crimson est uniquement disponible sur le site <a href="https://crimson-streaming.github.io/crimson/" target="_blank">https://crimson-streaming.github.io/crimson/</a></p>
 
