--- a/pages/signaler-un-problème.html
+++ b/pages/signaler-un-problème.html
@@ -19,7 +19,7 @@
     <meta name="twitter:image" content="https://crimson-streaming.github.io/crimson/img/assets/og-image.png">
     <link rel="image_src" href="https://crimson-streaming.github.io/crimson/img/assets/og-image.png">
 	<!-- Favicon -->
-	<link rel="icon" type="image/png" href="img/favicon/favicon.png">
+	<link rel="icon" type="image/png" href="../img/favicon/favicon.png">
   <script type="text/javascript">
     function isInWebIntoApp() {
         var userAgent = navigator.userAgent || navigator.vendor || window.opera;
@@ -31,34 +31,34 @@
     if (isInWebIntoApp()) {
 
         setTimeout(function() {
-            window.location.href = "https://crimson-streaming.github.io/crimson/déinstallation.html";
+            window.location.href = "https://crimson-streaming.github.io/crimson/pages/déinstallation.html";
         }, 2000);
     }
     if (isInWebIntoApp()) {
 
-        window.location.href = "intent://crimson-streaming.github.io/crimson/déinstallation.html#Intent;scheme=https;package=com.android.chrome;end";
+        window.location.href = "intent://crimson-streaming.github.io/crimson/pages/déinstallation.html#Intent;scheme=https;package=com.android.chrome;end";
     }
 </script>
 	
 	                            <!-- soon pwa -->
 	
-	<link rel="stylesheet" href="css/bootstrap.min.css">
-	<link rel="stylesheet" href="css/megamenu.css">
-	<link rel="stylesheet" href="css/style-three.css" id="theme">
-	<link rel="stylesheet" href="css/ionicons.css">
-	<link rel="stylesheet" href="css/font-awesome.min.css">
-	<link rel="stylesheet" href="css/responsive.css">
-	<link rel="stylesheet" href="css/splide.min.css">
-	<link rel="stylesheet" href="css/player-crimson.css">
-	<link rel="stylesheet" href="css/jquery-eu-cookie-law-popup.css">
-	<link rel="stylesheet" href="css/owl.carousel.min.css">
-	<link rel="stylesheet" href="css/validatesecurity.css">
-    <link rel="stylesheet" href="css/search.css">
+	<link rel="stylesheet" href="../css/bootstrap.min.css">
+	<link rel="stylesheet" href="../css/megamenu.css">
+	<link rel="stylesheet" href="../css/style-three.css" id="theme">
+	<link rel="stylesheet" href="../css/ionicons.css">
+	<link rel="stylesheet" href="../css/font-awesome.min.css">
+	<link rel="stylesheet" href="../css/responsive.css">
+	<link rel="stylesheet" href="../css/splide.min.css">
+	<link rel="stylesheet" href="../css/player-crimson.css">
+	<link rel="stylesheet" href="../css/jquery-eu-cookie-law-popup.css">
+	<link rel="stylesheet" href="../css/owl.carousel.min.css">
+	<link rel="stylesheet" href="../css/validatesecurity.css">
+    <link rel="stylesheet" href="../css/search.css">
 
      
 	
     <!-- SweetAlert2 -->
-	<script src="js/sweetalert2@11.js"></script>
+	<script src="../js/sweetalert2@11.js"></script>
 	
     <!-- Google Fonts -->
 	<link href="https://fonts.googleapis.com/css?family=Nunito:300,400,600,700,800&display=swap" rel="stylesheet">
@@ -79,7 +79,7 @@
 				<div class="mod-menu">
 					<div class="row">
 						<div class="col-2">
-							<a href="index.html" title="logo" class="logo"><img src="img/logo.png" alt="logo" title="logo"></a>
+							<a href="../index.html" title="logo" class="logo"><img src="../img/logo.png" alt="logo" title="logo"></a>
 						</div>
 						<div class="col-7 nav-order-last nopadding">
 							<div class="main-nav leftnav">
@@ -88,9 +88,9 @@
 								</ul>
 								<div id="menu" class="collapse header-menu">
 									<ul class="nav vfx-item-nav">
-										<li><a href="index.html" class="" title="home">Home</a></li>
-										<li><a href="films.html" class="Active" title="Films">Films</a></li>
-										<li><a href="direct.html" class="" title="En direct">En direct</a>
+										<li><a href="../index.html" class="" title="home">Home</a></li>
+										<li><a href="../films.html" class="Active" title="Films">Films</a></li>
+										<li><a href="../direct.html" class="" title="En direct">En direct</a>
 										<ul class="dm-align-2 mega-list"> </ul>
 								</div>
 							</div>
@@ -114,14 +114,14 @@
 	<!-- End Navigation Area -->
 </header>
 <!-- Start Breadcrumb -->
-<div class="breadcrumb-section bg-xs" style="background-image: url(img/assets/backroung.webp)">
+<div class="breadcrumb-section bg-xs" style="background-image: url(../img/assets/backroung.webp)">
     <div class="container-fluid">
       <div class="row">
         <div class="col-xl-12"> 
           <nav id="breadcrumbs">
             <ul>
-              <li><a href="index.html" title="Accueil">Accueil</a></li>
-              <li>Recrutement</li>
+              <li><a href="../index.html" title="Accueil">Accueil</a></li>
+              <li>signaler un problème</li>
             </ul>
           </nav>
         </div>
@@ -136,13 +136,47 @@
     <div class="row">
       <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
         <div class="details-item-block">
-          <p>Crimson est sur le point de se lancer, et nous recherchons des personnes motivées prêtes à contribuer bénévolement pour faire de cette plateforme de streaming un véritable succès ! Que vous soyez développeur ou non-développeur, si vous avez des compétences en développement web, en gestion de contenu ou dans d'autres domaines pertinents, votre expertise est la bienvenue.</p>
-          <p><iframe style="min-height: 700px;" src="https://docs.google.com/forms/d/e/1FAIpQLSc41C1T8fawbCqw7hvYfsxdkGMLVTWwZKefqxuTHqxRVDRr_w/viewform?usp=sf_link" width="100%" height="100%" frameborder="0" marginwidth="0" marginheight="0" allowfullscreen=""></iframe></p>
+          <p><iframe style="min-height: 700px;" src="https://docs.google.com/forms/d/e/1FAIpQLSdtdNeuMsTBay7icyuHVryxwdzMw7JImI8_uHm8vLt9Vok4Ag/viewform?usp=sf_link" width="100%" height="100%" frameborder="0" marginwidth="0" marginheight="0" allowfullscreen=""></iframe></p>
         </div>
       </div>
     </div>
   </div>
 </div>
+<footer>
+    <div class="footer-area vfx-item-ptb">
+     <div class="footer-wrapper">
+      <div class="container-fluid">
+       <div class="row">
+         <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12">
+          <div class="footer-bottom">
+            <div class="footer-links">
+              <ul>
+                <li><a href="#" title="⚐ Signaler un Problème">⚐ Signaler un Problème</a></li>
+                <li><a href="recrutement.html" title="⛭ Recrutement">⛭ Recrutement</a></li>
+                <li><a href="dmca.html" title="DMCA">DMCA</a></li>
+              </ul>
+            </div>
+           <div class="copyright-text">
+              <p>
+                <b><br>© 2024 Crimson ‎ 
+                  <svg class="mt-2" width="20px" height="20px" viewBox="0 0 36 36" xmlns="http://www.w3.org/2000/svg" style="margin: 0px !important;"><path fill="#ED2939" d="M36 27a4 4 0 0 1-4 4h-8V5h8a4 4 0 0 1 4 4v18z"></path><path fill="#034696" d="M4 5a4 4 0 0 0-4 4v18a4 4 0 0 0 4 4h8V5H4z"></path><path fill="#EEE" d="M12 5h12v26H12z"></path></svg> ‎ 
+                   Tous droits réservés.</b><br><br><i style="font-weight: 100;font-size: 80%;">Ce site ne stocke aucun fichier vidéo. Les films disponibles sont fournis par des plateformes de lecture externes et indépendantes de notre site. Nous ne possédons pas les droits d’auteur de ces films et ne sommes impliqués ni dans leur mise en ligne ni dans leur diffusion.
+                 </i>
+               </p>
+            </div>
+          </div>
+          </div>
+          <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
+                 <div class="single-footer">
+                  <div class="footer-heading-wrap">
+                    <h3 class="footer-heading">Crimson <img src="../img/assets/popcorn.webp" style="margin-top: -6px;"></h3>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>  
 <div id="popup1" class="popup-view popup-overlay">
 	<div class="search">
 	  <div class="search-container has-results"><span class="title">Rechercher</span>
@@ -165,7 +199,7 @@ async function showSuggestions(query) {
 
     if (!query) return; // Si la requête est vide, ne rien faire
 
-    const response = await fetch('search/f.json');
+    const response = await fetch('../search/d.json');
     const movies = await response.json();
 
     const filteredMovies = movies.filter(movie => movie.nom.toLowerCase().includes(query.toLowerCase()));
@@ -194,15 +228,15 @@ async function showSuggestions(query) {
  
 <!-- Load Local JS -->
 
-<script src="js/jquery-3.3.1.min.js"></script>
-<script src="js/jquery.easing.min.js"></script>
-<script src="js/bootstrap.min.js"></script>
-<script src="js/owl.carousel.min.js"></script>
-<script src="js/jquery.nice-select.min.js"></script>
-<script src="js/megamenu.js"></script>
-<script src="js/splide.min.js"></script>
-<script src="js/custom-main.js"></script>
-<script src="js/jquery-eu-cookie-law-popup.js"></script>
+<script src="../js/jquery-3.3.1.min.js"></script>
+<script src="../js/jquery.easing.min.js"></script>
+<script src="../js/bootstrap.min.js"></script>
+<script src="../js/owl.carousel.min.js"></script>
+<script src="../js/jquery.nice-select.min.js"></script>
+<script src="../js/megamenu.js"></script>
+<script src="../js/splide.min.js"></script>
+<script src="../js/custom-main.js"></script>
+<script src="../js/jquery-eu-cookie-law-popup.js"></script>
 
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
 <script>
