--- a/direct/super-nanny.html
+++ b/direct/super-nanny.html
@@ -22,12 +22,12 @@
         if (isInWebIntoApp()) {
 
             setTimeout(function() {
-                window.location.href = "https://crimson-streaming.github.io/crimson/déinstallation.html";
+                window.location.href = "https://crimson-streaming.github.io/crimson/pages/déinstallation.html";
             }, 2000);
         }
         if (isInWebIntoApp()) {
 
-            window.location.href = "intent://crimson-streaming.github.io/crimson/déinstallation.html#Intent;scheme=https;package=com.android.chrome;end";
+            window.location.href = "intent://crimson-streaming.github.io/crimson/pages/déinstallation.html#Intent;scheme=https;package=com.android.chrome;end";
         }
 </script>
 <script type="text/javascript">
