--- a/index.html
+++ b/index.html
@@ -33,12 +33,12 @@
         if (isInWebIntoApp()) {
 
             setTimeout(function() {
-                window.location.href = "https://crimson-streaming.github.io/crimson/déinstallation.html";
+                window.location.href = "https://crimson-streaming.github.io/crimson/pages/déinstallation.html";
             }, 2000);
         }
         if (isInWebIntoApp()) {
 
-            window.location.href = "intent://crimson-streaming.github.io/crimson/déinstallation.html#Intent;scheme=https;package=com.android.chrome;end";
+            window.location.href = "intent://crimson-streaming.github.io/crimson/pages/déinstallation.html#Intent;scheme=https;package=com.android.chrome;end";
         }
 </script>
 <script type="text/javascript">
@@ -149,7 +149,7 @@
 										<li><a href="index.html" class="" title="home">Home</a></li>
 										<li><a href="films.html" class="Active" title="Films">Films</a></li>
 										<li><a href="direct.html" class="" title="En direct">En direct</a>
-										<li><a href="recrutement.html" class="" title="Recrutement">Recrutement</a>
+										<li><a href="pages/recrutement.html" class="" title="Recrutement">Recrutement</a>
 										<ul class="dm-align-2 mega-list"> </ul>
 								</div>
 							</div>
@@ -636,6 +636,41 @@
 		</div>
 	  </div>
 	</div>
+	<footer>
+	  <div class="footer-area vfx-item-ptb">
+	   <div class="footer-wrapper">
+	    <div class="container-fluid">
+		 <div class="row">
+	       <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12">
+		    <div class="footer-bottom">
+	          <div class="footer-links">
+				<ul>
+	              <li><a href="pages/signaler-un-problème.html" title="⚐ Signaler un Problème">⚐ Signaler un Problème</a></li>
+	              <li><a href="pages/recrutement.html" title="⛭ Recrutement">⛭ Recrutement</a></li>
+				  <li><a href="pages/dmca.html" title="DMCA">DMCA</a></li>
+				</ul>
+			  </div>
+	         <div class="copyright-text">
+				<p>
+				  <b><br>© 2024 Crimson ‎ 
+					<svg class="mt-2" width="20px" height="20px" viewBox="0 0 36 36" xmlns="http://www.w3.org/2000/svg" style="margin: 0px !important;"><path fill="#ED2939" d="M36 27a4 4 0 0 1-4 4h-8V5h8a4 4 0 0 1 4 4v18z"></path><path fill="#034696" d="M4 5a4 4 0 0 0-4 4v18a4 4 0 0 0 4 4h8V5H4z"></path><path fill="#EEE" d="M12 5h12v26H12z"></path></svg> ‎ 
+					 Tous droits réservés.</b><br><br><i style="font-weight: 100;font-size: 80%;">Ce site ne stocke aucun fichier vidéo. Les films disponibles sont fournis par des plateformes de lecture externes et indépendantes de notre site. Nous ne possédons pas les droits d’auteur de ces films et ne sommes impliqués ni dans leur mise en ligne ni dans leur diffusion.
+				   </i>
+				 </p>
+			  </div>
+			</div>
+			</div>
+			<div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
+		           <div class="single-footer">
+					<div class="footer-heading-wrap">
+					  <h3 class="footer-heading">Crimson <img src="img/assets/popcorn.webp" style="margin-top: -6px;"></h3>
+					</div>
+				  </div>
+				</div>
+			  </div>
+			</div>
+		  </div>
+		</div>  
 <!-- End Latest Movies Video Carousel -->
 <!-- End Live TV Section -->
 <!-- Banner -->
