--- a/index.html
+++ b/index.html
@@ -22,6 +22,16 @@
 <!-- Favicon -->
 	<link rel="icon" type="image/png" href="img/favicon/favicon.png">
 
+	<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-7QZGKN17QX"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-7QZGKN17QX');
+</script>
+
 	<script type="text/javascript">
         function isInWebIntoApp() {
             var userAgent = navigator.userAgent || navigator.vendor || window.opera;
