--- a/404.html
+++ b/404.html
@@ -10,7 +10,7 @@
     <meta name="description" content="Avec Crimson, profitez des derniers films et séries en VF HD, gratuitement et sans aucune publicité ! Ce qui ressemble à un rêve devient une réalité grâce à la révolution Crimson !" />
 
     <!-- Favicon -->
-  <link rel="icon" type="image/png" href="img/favicon/favicon.png">
+  <link rel="icon" type="image/png" href="https://crimson-streaming.github.io/crimson/img/favicon/favicon.png">
 
   <script type="text/javascript">
     function isInWebIntoApp() {
