--- a/film/joker.html
+++ b/film/joker.html
@@ -9,7 +9,17 @@
   <meta name="description" content="Crimson | Regarder Joker en streaming gratuitement et sans publicité ni inscription avec Crimson !" />
   <link rel="canonical" href="joker.html">
 <!-- Favicon -->
-	<link rel="icon" type="image/png" href="img/favicon/favicon.png">
+	<link rel="icon" type="image/png" href="../img/favicon/favicon.png">
+
+	<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-7QZGKN17QX"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-7QZGKN17QX');
+</script>
 	<script type="text/javascript">
         function isInWebIntoApp() {
             var userAgent = navigator.userAgent || navigator.vendor || window.opera;
