--- a/film/le-comte-de-montecristo.html
+++ b/film/le-comte-de-montecristo.html
@@ -10,6 +10,16 @@
   <link rel="canonical" href="le-comte-de-montecristo.html">
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="../img/favicon/favicon.png">
+
+  	<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-7QZGKN17QX"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-7QZGKN17QX');
+</script>
   
   <!-- manifest -->
   <meta name="apple-mobile-web-app-capable" content="yes">
