--- a/index.html
+++ b/index.html
@@ -32,6 +32,16 @@
   gtag('config', 'G-7QZGKN17QX');
 </script>
 
+	<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-7QZGKN17QX"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-7QZGKN17QX');
+</script>
+
 	<script type="text/javascript">
         function isInWebIntoApp() {
             var userAgent = navigator.userAgent || navigator.vendor || window.opera;
