--- a/séries/episodes.html
+++ b/séries/episodes.html
@@ -20,7 +20,17 @@
     <link rel="image_src" href="https://crimson-streaming.github.io/crimson/img/assets/og-image.png">
 
 <!-- Favicon -->
-	<link rel="icon" type="image/png" href="img/favicon/favicon.png">
+	<link rel="icon" type="image/png" href="../img/favicon/favicon.png">
+
+	<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-7QZGKN17QX"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-7QZGKN17QX');
+</script>
 
 	<script type="text/javascript">
         function isInWebIntoApp() {
