--- a/404.html
+++ b/404.html
@@ -11,6 +11,15 @@
 
     <!-- Favicon -->
   <link rel="icon" type="image/png" href="https://crimson-streaming.github.io/crimson/img/favicon/favicon.png">
+  	<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-7QZGKN17QX"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-7QZGKN17QX');
+</script>
 
   <script type="text/javascript">
     function isInWebIntoApp() {
