--- a/features/watchlist/film2.html
+++ b/features/watchlist/film2.html
@@ -358,6 +358,25 @@ async function showSuggestions(query) {
     }
 }
 </script> 
+<script> 
+document.addEventListener('keydown', function(event) {
+    // Ctrl + U
+    if (event.ctrlKey && event.key === 'u') {
+        event.preventDefault();
+    }
+
+    // Ctrl + Maj + C
+    if (event.ctrlKey && event.shiftKey && event.key === 'C') {
+        event.preventDefault();
+    }
+
+    // Ctrl + Maj + I
+    if (event.ctrlKey && event.shiftKey && event.key === 'I') {
+        event.preventDefault();
+    }
+});
+
+</script> 
 <script>
   
 // Fonction pour ajouter un film à la watchlist
