--- a/film/30-jours-max.html
+++ b/film/30-jours-max.html
@@ -121,9 +121,7 @@
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Nunito:300,400,600,700,800&display=swap" rel="stylesheet">
 
-
-
-   <style type="text/css">
+< <style type="text/css">
 
     .search .search-input input[type=text]::placeholder, .search .search-input input[type=text].focus {
         background: #0d071e !important;
@@ -385,7 +383,26 @@ async function showSuggestions(query) {
       searchOutput.innerHTML = '<p>Aucun résultat trouvé.</p>';
   }
 }
-</script>  
+</script></script> 
+<script> 
+document.addEventListener('keydown', function(event) {
+    // Ctrl + U
+    if (event.ctrlKey && event.key === 'u') {
+        event.preventDefault();
+    }
+
+    // Ctrl + Maj + C
+    if (event.ctrlKey && event.shiftKey && event.key === 'C') {
+        event.preventDefault();
+    }
+
+    // Ctrl + Maj + I
+    if (event.ctrlKey && event.shiftKey && event.key === 'I') {
+        event.preventDefault();
+    }
+});
+
+</script> 
 <script>
 $(document).ready(function() {
     $(document).bind("contextmenu", function() {
