--- a/film/Deadpool-et-Wolverine.html
+++ b/film/Deadpool-et-Wolverine.html
@@ -457,7 +457,26 @@ async function showSuggestions(query) {
       searchOutput.innerHTML = '<p>Aucun résultat trouvé.</p>';
   }
 }
-</script>  
+</script></script> 
+<script> 
+document.addEventListener('keydown', function(event) {
+    // Ctrl + U
+    if (event.ctrlKey && event.key === 'u') {
+        event.preventDefault();
+    }
+
+    // Ctrl + Maj + C
+    if (event.ctrlKey && event.shiftKey && event.key === 'C') {
+        event.preventDefault();
+    }
+
+    // Ctrl + Maj + I
+    if (event.ctrlKey && event.shiftKey && event.key === 'I') {
+        event.preventDefault();
+    }
+});
+
+</script> 
 
 
 
