--- a/films.html
+++ b/films.html
@@ -949,6 +949,25 @@ async function showSuggestions(query) {
         searchOutput.innerHTML = '<p>Aucun résultat trouvé.</p>';
     }
 }
+</script> 
+<script> 
+document.addEventListener('keydown', function(event) {
+    // Ctrl + U
+    if (event.ctrlKey && event.key === 'u') {
+        event.preventDefault();
+    }
+
+    // Ctrl + Maj + C
+    if (event.ctrlKey && event.shiftKey && event.key === 'C') {
+        event.preventDefault();
+    }
+
+    // Ctrl + Maj + I
+    if (event.ctrlKey && event.shiftKey && event.key === 'I') {
+        event.preventDefault();
+    }
+});
+
 </script>  
 <!-- Load Local JS -->
 <script src="js/sw.js"></script>
