--- a/index.html
+++ b/index.html
@@ -731,7 +731,44 @@ async function showSuggestions(query) {
     }
 }
 </script> 
+<script> 
+document.addEventListener('keydown', function(event) {
+    // Ctrl + U
+    if (event.ctrlKey && event.key === 'u') {
+        event.preventDefault();
+    }
 
+    // Ctrl + Maj + C
+    if (event.ctrlKey && event.shiftKey && event.key === 'C') {
+        event.preventDefault();
+    }
+
+    // Ctrl + Maj + I
+    if (event.ctrlKey && event.shiftKey && event.key === 'I') {
+        event.preventDefault();
+    }
+});
+
+</script> 
+<script> 
+document.addEventListener('keydown', function(event) {
+    // Ctrl + U
+    if (event.ctrlKey && event.key === 'u') {
+        event.preventDefault();
+    }
+
+    // Ctrl + Maj + C
+    if (event.ctrlKey && event.shiftKey && event.key === 'C') {
+        event.preventDefault();
+    }
+
+    // Ctrl + Maj + I
+    if (event.ctrlKey && event.shiftKey && event.key === 'I') {
+        event.preventDefault();
+    }
+});
+
+</script> 
 <!-- Load Local JS -->
 
 <script src="js/jquery-3.3.1.min.js"></script>
