--- a/404.html
+++ b/404.html
@@ -226,6 +226,19 @@
         });
         
         </script>  
+        <script>
+            // Fonction pour détecter si on est en mode PWA
+            function isPWA() {
+              return window.matchMedia('(display-mode: standalone)').matches || window.navigator.standalone;
+            }
+          
+            // Si on est en mode PWA, on ignore le script megamenu.js
+            if (!isPWA()) {
+              var script = document.createElement("script");
+              script.src = "js/megamenu.js";
+              document.head.appendChild(script);
+            }
+          </script>
 <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
 <script src="https://cdn.plyr.io/3.7.8/plyr.polyfilled.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/hls.js@latest"></script>
