--- a/index.html
+++ b/index.html
@@ -137,6 +137,11 @@
 	.search .search-input input[type=text].focus {
 		background: #0d071e !important;
 	}
+	html, body {
+    overflow: auto; /* Assurez-vous que ce n'est pas `hidden` */
+    height: 100%;   /* Permet un comportement normal de défilement */
+}
+
 
 	</style>
 </head>
