--- a/index.html
+++ b/index.html
@@ -761,7 +761,7 @@ async function showSuggestions(query) {
 <script src="js/bootstrap.min.js"></script>
 <script src="js/owl.carousel.min.js"></script>
 <script src="js/jquery.nice-select.min.js"></script>
-
+<script src="js/megamenu.js"></script>
 <script src="js/splide.min.js"></script>
 <script src="js/custom-main.js"></script>
 <script src="js/jquery-eu-cookie-law-popup.js"></script>
