--- a/features/band-d'annoce/test.html
+++ b/features/band-d'annoce/test.html
@@ -371,7 +371,9 @@
     </div>
   </div>
 </div>
-<div id="popup1" class="popup-view popup-overlay">
+ <div class="scroll-top">
+		<div class="scroll-icon"> <i class="fa fa-angle-up"></i> </div>
+	  </div> <div id="popup1" class="popup-view popup-overlay">
   <div class="search">
     <div class="search-container has-results"><span class="title">Rechercher</span>
       <div class="search-input">
