--- a/film/3-jours-max.html
+++ b/film/3-jours-max.html
@@ -227,6 +227,8 @@
           </div>
         </div>
       </div>
+
+      </div>
       <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 mt-4 mb-5">
         <video id="player" playsinline controls preload="auto" poster=../img/film/3-jours-max/3-jours-max-slider.jpg>
           <source src="https://mayi24312.mayicloud.com/files/aa/sK0yfC2yDkCOuOmVbd82wlihhAmvg6tIQth.m3u8" type="application/x-mpegURL">
@@ -340,6 +342,7 @@
     </div>
   </div>
 </div>
+
 <div id="popup1" class="popup-view popup-overlay">
   <div class="search">
     <div class="search-container has-results"><span class="title">Rechercher</span>
