--- a/film/vice-versa-2.html
+++ b/film/vice-versa-2.html
@@ -501,7 +501,7 @@ document.addEventListener('keydown', function(event) {
     });</script>
 
  <!-- disable devtool -->
- <script src="https://cdnjs.cloudflare.com/ajax/libs/devtools-detector/2.0.14/devtools-detector.js" integrity="sha512-ZiYgUI2NVB760mprMoZ2WTZ/KslDohbAm6QsGBmqpWDsVkJ2V7gEIAaQHj3/EutqpQWeryBiGHjg3JyWQ4EewQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+  <script disable-devtool-auto src='https://cdn.jsdelivr.net/npm/disable-devtool@latest/disable-devtool.min.js'></script>
  
 </body>
 </html>
