--- a/films.html
+++ b/films.html
@@ -21,6 +21,24 @@
 	<!-- Favicon -->
 	<link rel="icon" type="image/png" href="img/favicon/favicon.png">
 
+  <!-- Couleurs pour la PWA -->
+  <meta name="theme-color" content="#b81b0e">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+  
+  <!-- Support pour iOS -->
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-title" content="Crimson">
+  
+  <!-- Icône pour l'écran d'accueil iOS -->
+  <link rel="apple-touch-icon" href="img/logo-mobile.png">
+  
+  <!-- Splash screen (écran de chargement iOS) -->
+  <link rel="apple-touch-startup-image" href="img/logo-mobile.png">
+
+  <!-- Fichier manifest.json -->
+  <link rel="manifest" href="pwa/manifest.json">
+
+
 	<!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-7QZGKN17QX"></script>
 <script>
@@ -904,6 +922,9 @@
                  </div>
      </div>
   </div>
+  <div class="scroll-top">
+		<div class="scroll-icon"> <i class="fa fa-angle-up"></i> </div>
+	  </div>
   <div id="popup1" class="popup-view popup-overlay">
 	<div class="search">
 	  <div class="search-container has-results"><span class="title">Rechercher</span>
